--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CONNECTION_STRING = mongodb+srv://<username>:<password>@cluster0.x1ccn.mongodb.net/<dbname>?retryWrites=true&w=majority
-secret= I-love-my-dog
-API_URL= /api/v1
+API_URL = /api/v1
+secret=no-secret
+CONNECTION_STRING = mongodb+srv://admin:admin@cluster0.frkbt.mongodb.net/eshope-database?retryWrites=true&w=majority
